--- a/examples/label/label.html
+++ b/examples/label/label.html
@@ -49,7 +49,7 @@
 	<script>
 		var rightItem = document.getElementById("rightItem");
 		rightItem.setOnClick(()=>{
-			let url = 'https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/label/font.html';
+			let url = 'https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/label/font.html';
 			document.pushNavigatorWithURL(url);
 		});
 
