--- a/examsEnter/examples.html
+++ b/examsEnter/examples.html
@@ -15,39 +15,39 @@
 			rowsData:[
 			{
 				name : "view组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/view/view.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/view/view.html"
 			},
 			{
 				name : "label组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/label/label.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/label/label.html"
 			},
 			{
 				name : "scroll组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/scroll/scroll.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/scroll/scroll.html"
 			},
 			{
 				name : "button组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/button/button.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/button/button.html"
 			},
 			{
 				name : "input组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/input/input.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/input/input.html"
 			},
 			{
 				name : "textArea组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/textArea/textArea.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/textArea/textArea.html"
 			},
 			{
 				name : "segment组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/segment/segment.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/segment/segment.html"
 			},
 			{
 				name : "switch组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/switch/switch.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/switch/switch.html"
 			},
 			{
 				name : "webView组件",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/examples/webView/webView.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/examples/webView/webView.html"
 			},
 			{
 				name : "table组件",
@@ -76,23 +76,23 @@
 			rowsData:[
 			{
 				name : "就业招聘",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/tokenapp/recruit/recruit.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/tokenapp/recruit/recruit.html"
 			},
 			{
 				name : "校历",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/tokenapp/calendar/calendar.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/tokenapp/calendar/calendar.html"
 			},
 			{
 				name : "校园卡",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/tokenapp/card/card.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/tokenapp/card/card.html"
 			},
 			{
 				name : "Time",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/tokenapp/time/time.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/tokenapp/time/time.html"
 			},
 			{
 				name : "更多",
-				url : "https://coding.net/u/cx478815108/p/TokenDynamicApp-public/git/raw/master/tokenapp/more/more.html"
+				url : "https://raw.githubusercontent.com/cx478815108/TokenHybridHTML/master/tokenapp/more/more.html"
 			},
 
 			]
