--- a/tokenapp/time/time.html
+++ b/tokenapp/time/time.html
@@ -62,8 +62,8 @@
 		});
 
 		function buttonPressed(item,index){
-			var y = item.maxY - animationView.originY;
-			animationView.startAnimation().moveY(y).commit(2);
+			// var y = item.maxY - animationView.originY;
+			// animationView.startAnimation().moveY(y).commit(2);
 		}
 	</script>
 
