--- a/examples/segment/segment.html
+++ b/examples/segment/segment.html
@@ -24,7 +24,7 @@
 	</style>
 
 	<script  type="text/javascript" charset="utf-8">
-		let seg1 = document.getElementById("seg1");
+		var seg1 = document.getElementById("seg1");
 		seg1.setOnClick((index)=>{
 			token.alert("提示","你点击了"+index);
 		});
