--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -41,7 +41,7 @@
 		}
 	</style>
 	<script charset="utf-8">
-		let listData = [
+		var listData = [
 		        {
 		            sectionData:
 		                {
@@ -88,7 +88,7 @@
 		        },
 		    ];
 
-		let list = document.getElementById("list");
+		var list = document.getElementById("list");
 	    list.reloadData(listData);
 	</script>
 </head>
