--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -20,7 +20,7 @@
 	</style>
 
 	<script  type="text/javascript" charset="utf-8">
-		let switch1 = document.getElementById("switch");
+		var switch1 = document.getElementById("switch");
 		switch1.setOnClick((state)=>{
 			token.alert("提示","开关状态"+state);
 		})
